--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,8 +18,8 @@ theme:
   favicon: assets/images/link/minjoker.png
   font: false  # prevent typeface from loading from Google Fonts
   features: 
-    # - navigation.instant  # seems to cause formula rendering difficulty ( need one more refresh )
-    - navigation.tracking
+    # - navigation.instant   # seems to cause formula rendering difficulty ( need one more refresh )
+    # - navigation.tracking  # not good and has conflict with toc.js
     - navigation.tabs
     # - navigation.prune
     - navigation.indexes
@@ -52,16 +52,16 @@ extra_css:
   - https://cdn.tonycrane.cc/jbmono/jetbrainsmono.css
   - https://cdn.tonycrane.cc/lxgw/lxgwscreen.css
   # - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.css  # from mkdocs material
-  - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css  # from katex.org
+  - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css         # from katex.org
 
 extra_javascript:
   - javascripts/extra.js
   - javascripts/katex.js
-  # - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.js  # from mkdocs material
+  # - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.js                # from mkdocs material
   # - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/contrib/auto-render.min.js  # from mkdocs material
   - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js  # from katex.org
-  - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js  # from katex.org
-  - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/copy-tex.min.js  # from katex.org, help copy tex to clipboard
+  - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js         # from katex.org
+  - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/copy-tex.min.js            # from katex.org, help copy tex to clipboard
 
 extra:
   analytics:
