--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
+# Enforce end-of-line LF
+* text=auto eol=lf
+
+# Help GitHub identify the language
 *.md linguist-language=Markdown linguist-vendored=false linguist-documentation=false linguist-detectable=true
 *.css linguist-language=CSS linguist-vendored=false linguist-documentation=false linguist-detectable=true
 *.js linguist-language=JavaScript linguist-vendored=false linguist-documentation=false linguist-detectable=true
