--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,15 +51,15 @@ extra_css:
   - stylesheets/flink.css
   - https://cdn.tonycrane.cc/jbmono/jetbrainsmono.css
   - https://cdn.tonycrane.cc/lxgw/lxgwscreen.css
-  # - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.css  # from mkdocs material
-  - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css         # from katex.org
+  # - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.css               # from mkdocs material
+  - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css                      # from katex.org
 
 extra_javascript:
   - javascripts/extra.js
   - javascripts/katex.js
   # - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.js                # from mkdocs material
   # - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/contrib/auto-render.min.js  # from mkdocs material
-  - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js  # from katex.org
+  - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js                       # from katex.org
   - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js         # from katex.org
   - https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/copy-tex.min.js            # from katex.org, help copy tex to clipboard
 
@@ -162,6 +162,10 @@ nav:
         - cs/system/digital_logic/note1.md
         - cs/system/digital_logic/note2.md
         - cs/system/digital_logic/note3.md
+    - 信息与编码理论:
+      - 量子信息基础:
+        - cs/information/qi/index.md
+        - cs/information/qi/note1.md
     - 工具相关:
       - cs/tools/markdown.md
 
