--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -169,6 +169,7 @@ nav:
       - 计算机组成:
         - cs/system/organization/index.md
         - cs/system/organization/note1.md
+        - cs/system/organization/note2.md
     - 信息与编码理论:
       - 量子信息基础:
         - cs/information/qi/index.md
