--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -174,6 +174,7 @@ nav:
       - 量子信息基础:
         - cs/information/qi/index.md
         - cs/information/qi/note1.md
+        - cs/information/qi/note2.md
     - 工具相关:
       - cs/tools/markdown.md
 
