--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -143,56 +143,32 @@ nav:
     - index.md
     - Friends: link.md
 
-  - Computer Science:
-    - cs/index.md
-    - 数据结构与算法:
-      - 数据结构基础:
-        - cs/algorithm/fds/index.md
-        - cs/algorithm/fds/note1.md
-        - cs/algorithm/fds/note2.md
-        - cs/algorithm/fds/note3.md
-        - cs/algorithm/fds/exercise.md
-      - 高级数据结构与算法分析:
-        - cs/algorithm/ads/index.md
-        - cs/algorithm/ads/note1.md
-        - cs/algorithm/ads/note2.md
-      - Princeton:
-        - cs/algorithm/princeton/index.md
-        - cs/algorithm/princeton/note1.md
-        - cs/algorithm/princeton/note2.md
-    - 计算机系统:
-      - 数字逻辑设计:
-        - cs/system/digital_logic/index.md
-        - cs/system/digital_logic/note1.md
-        - cs/system/digital_logic/note2.md
-        - cs/system/digital_logic/note3.md
-      - 计算机组成:
-        - cs/system/organization/index.md
-        - cs/system/organization/note1.md
-        - cs/system/organization/note2.md
-    - 信息与编码理论:
-      - 量子信息基础:
-        - cs/information/qi/index.md
-        - cs/information/qi/note1.md
-        - cs/information/qi/note2.md
-    - 工具相关:
-      - cs/tools/markdown.md
-
-  - Mathematics:
-    - math/index.md
-    - 概率论:
-      - 概率论与数理统计:
-        - math/probability/probability_statistics/index.md
-        - math/probability/probability_statistics/note1.md
-        - math/probability/probability_statistics/note2.md
-
-  - BCI:
-    - bci/index.md
-    - 脑机接口导论:
-      - bci/bciai/index.md
-      - bci/bciai/ch3.md
-      - bci/bciai/ch4.md
-      - bci/bciai/ch5.md
-
-  - Others:
-    - others/index.md
+  - Courses:
+    - courses/index.md
+    - 数据结构基础:
+      - courses/fds/index.md
+      - courses/fds/note1.md
+      - courses/fds/note2.md
+      - courses/fds/note3.md
+      - courses/fds/exercise.md
+    - 高级数据结构与算法分析:
+      - courses/ads/index.md
+      - courses/ads/note1.md
+      - courses/ads/note2.md
+    - 数字逻辑设计:
+      - courses/dd/index.md
+      - courses/dd/note1.md
+      - courses/dd/note2.md
+      - courses/dd/note3.md
+    - 计算机组成:
+      - courses/co/index.md
+      - courses/co/note1.md
+      - courses/co/note2.md
+    - 量子信息基础:
+      - courses/qi/index.md
+      - courses/qi/note1.md
+      - courses/qi/note2.md
+    - 概率论与数理统计:
+      - courses/ps/index.md
+      - courses/ps/note1.md
+      - courses/ps/note2.md
