--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -176,20 +176,20 @@ nav:
       - courses/ps/note1.md
       - courses/ps/note2.md
 
-  - Archive:
-    - archive/index.md
+  - Unsorted:
+    - unsorted/index.md
     - Princeton Algorithms:
-      - archive/princeton/index.md
-      - archive/princeton/note1.md
-      - archive/princeton/note2.md
+      - unsorted/princeton/index.md
+      - unsorted/princeton/note1.md
+      - unsorted/princeton/note2.md
     - Stanford CS144:
-      - archive/cs144/index.md
-      - archive/cs144/note1.md
+      - unsorted/cs144/index.md
+      - unsorted/cs144/note1.md
     - 脑机接口导论:
-      - archive/bciai/index.md
-      - archive/bciai/ch3.md
-      - archive/bciai/ch4.md
-      - archive/bciai/ch5.md
+      - unsorted/bciai/index.md
+      - unsorted/bciai/ch3.md
+      - unsorted/bciai/ch4.md
+      - unsorted/bciai/ch5.md
     - 实用工具:
-      - archive/tools/markdown.md
-      - archive/tools/mac.md
+      - unsorted/tools/markdown.md
+      - unsorted/tools/mac.md
